fixed overflow on x axis

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
     margin: 0;
     box-sizing: border-box;
     transition: background-color 0.5s ease;
+    overflow-x: hidden;
 }
 
 #divider{
